{
  "version": 4,
  "terraform_version": "1.0.2",
  "serial": 99,
  "lineage": "01525cab-2833-a448-dbf7-53ff615b40b4",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:740157210687:security-group/sg-043b9e04a0307ea9f",
            "description": "Allow all inbound traffic to MySQL",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-043b9e04a0307ea9f",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3306
              }
            ],
            "name": "admin-sg",
            "name_prefix": "",
            "owner_id": "740157210687",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-949053ff"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_default_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:740157210687:internet-gateway/igw-02d60424d91b89ec0",
            "id": "igw-02d60424d91b89ec0",
            "owner_id": "740157210687",
            "tags": {
              "Name": "admin-vpc"
            },
            "tags_all": {
              "Name": "admin-vpc"
            },
            "vpc_id": "vpc-0907333ee370f9f30"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-02d60424d91b89ec0",
            "id": "r-rtb-078dc77c21f93bd7d1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-078dc77c21f93bd7d",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:740157210687:route-table/rtb-078dc77c21f93bd7d",
            "id": "rtb-078dc77c21f93bd7d",
            "owner_id": "740157210687",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "admin-vpc-public"
            },
            "tags_all": {
              "Name": "admin-vpc-public"
            },
            "vpc_id": "vpc-0907333ee370f9f30"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-08e7e49216050efc7",
            "route_table_id": "rtb-078dc77c21f93bd7d",
            "subnet_id": "subnet-09abae44c955e346b"
          },
          "dependencies": [
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ad1e0bfc4b4b22a7",
            "route_table_id": "rtb-078dc77c21f93bd7d",
            "subnet_id": "subnet-05b7bb61ca8e8e731"
          },
          "dependencies": [
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:740157210687:subnet/subnet-09abae44c955e346b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.0.101.0/24",
            "id": "subnet-09abae44c955e346b",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "740157210687",
            "tags": {
              "Name": "admin-vpc-public-ap-south-1a"
            },
            "tags_all": {
              "Name": "admin-vpc-public-ap-south-1a"
            },
            "vpc_id": "vpc-0907333ee370f9f30"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:740157210687:subnet/subnet-05b7bb61ca8e8e731",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "10.0.102.0/24",
            "id": "subnet-05b7bb61ca8e8e731",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "740157210687",
            "tags": {
              "Name": "admin-vpc-public-ap-south-1b"
            },
            "tags_all": {
              "Name": "admin-vpc-public-ap-south-1b"
            },
            "vpc_id": "vpc-0907333ee370f9f30"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:740157210687:vpc/vpc-0907333ee370f9f30",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0a84425f4e8ed559a",
            "default_route_table_id": "rtb-03ad29bb5e756c789",
            "default_security_group_id": "sg-03e725eec54d1f509",
            "dhcp_options_id": "dopt-f5f45a9e",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-0907333ee370f9f30",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-03ad29bb5e756c789",
            "owner_id": "740157210687",
            "tags": {
              "Name": "admin-vpc"
            },
            "tags_all": {
              "Name": "admin-vpc"
            }
          }
        }
      ]
    }
  ]
}